--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </article>
      </main>
       <footer>
-        <p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> para o <a href="https://youtube.com/cursoemvideo" target="_blank">CursoemVideo</a>.</p>
+        <p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Kauê Ednar</a> para o <a href="https://youtube.com/cursoemvideo" target="_blank">CursoemVideo</a>.</p>
       </footer>
 </body>
 </html>
